@@ -437,11 +437,6 @@ A=
 </solution>
 </exercise>
 
-<exercise type="M" number="50" rough="define m-way diret sum">
-<problem contributor="robertbeezer">Mimic <acroref type="definition" acro="DS" /> and construct a reasonable definition of $V=U_1\ds U_2\ds U_3\ds \dots\ds U_m$.
-</problem>
-</exercise>
-
 <exercise type="T" number="05" rough="three dimension facts as with-equality-iff">
 <problem contributor="robertbeezer">Trivially, if $U$ and $V$ are two subspaces of $W$ with $U = V$, then $\dimension{U}=\dimension{V}$.  Combine this fact, <acroref type="theorem" acro="PSSD" />, and <acroref type="theorem" acro="EDYES" /> all into one grand combined theorem.  You might look to <acroref type="theorem" acro="PIP" /> for stylistic inspiration.  (Notice this problem does not ask you to prove anything.  It just asks you to roll up three theorems into one compact, logically equivalent statement.)
 </problem>
