@@ -3,6 +3,7 @@ v3.xx 2015/xx/xx
 New: Exercise SSLE.C53, a 2x2 system from The Economist
 New: Exercise O.T31, Gram-Schmidt twice (suggested by Chili Johnson)
 Change: Annotated Acronyms, Chapter R, removed three obsolete items
+Change: Exercise PD.M50, deleted, now obsolete
 Edit: Consistent titles on Sage nonsingular matrix series (Daniel York)
 Edit: Examples CROB4, CROB3, had old-style inner products (Chris Thron)
 Edit: Streamline half of proof of Theorem NPNT
